spec/test/parser/invalid/_custom/interface_abstract_constructor.java
protected interface InterfaceAbstractConstructor {
    public abstract InterfaceAbstractConstructor() {}
}
